[gd_scene load_steps=2 format=3 uid="uid://crdwctj7m6f4i"]

[ext_resource type="Script" path="res://UI/in_game_points/points_ui.gd" id="1_xk6jq"]

[node name="CanvasGroup" type="CanvasLayer"]
script = ExtResource("1_xk6jq")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PointsText" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="FailuresText" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TimeLimitText" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time Limit"
